--- a/be/src/main/resources/application-prod.yml
+++ b/be/src/main/resources/application-prod.yml
@@ -17,6 +17,8 @@ spring:
         highlight_sql: false
         use_sql_comments: false
 logging:
+  file:
+    name: /home/ubuntu/logs/app.log
   level:
     com.back: INFO
     org.hibernate.SQL: INFO
